fix: font-size on small devices

--- a/src/globals.css
+++ b/src/globals.css
@@ -397,6 +397,6 @@ figure>.raw-katex>.raw-katex-html>.raw-tag {
 }
 @media (max-width: 600px) {
     :root {
-        font-size: 14px;
+        font-size: 15px;
     }
 }
